@@ -1,9 +1,12 @@
 ﻿using Abp.BackgroundJobs;
+using Abp.UI;
 using Ermes.Attributes;
 using Ermes.Bus.Dto;
 using Ermes.Configuration;
+using Ermes.Dto;
 using Ermes.Enums;
 using Ermes.EventHandlers;
+using Ermes.ExternalServices.Csi;
 using Ermes.Gamification.Dto;
 using Ermes.Jobs;
 using Ermes.Missions;
@@ -11,6 +14,7 @@ using Ermes.Missions.Dto;
 using Ermes.Persons;
 using Microsoft.AspNetCore.Http;
 using NetTopologySuite.Index.HPRtree;
+using NSwag.Annotations;
 using System;
 using System.Collections.Generic;
 using System.Text;
@@ -23,13 +27,16 @@ namespace Ermes.Bus
     {
         private readonly IBackgroundJobManager _backgroundJobManager;
         private readonly PersonManager _personManager;
+        private readonly CsiManager _csiManager;
         public BusAppService(
              IBackgroundJobManager backgroundJobManager,
-             PersonManager personManager
+             PersonManager personManager,
+             CsiManager csiManager
             )
         {
             _backgroundJobManager = backgroundJobManager;
             _personManager = personManager;
+            _csiManager = csiManager;
         }
 
         public async Task TestBusConsumerTopic(TestBusConsumerTopicInput input)
@@ -60,6 +67,23 @@ namespace Ermes.Bus
                         ReportId = 6
                     });
             }
+        }
+
+        [OpenApiOperation("Test Volter Tax Code availability",
+            @"
+                Check if the servive to retrieve the anonimyzed userId inside of Volter environment is up and running
+                Output: true if the service is online, exception if the service is not reachable
+                N.B.: the service is available only if called from inside Nivola environment
+            "
+        )]
+        public async Task<bool> TestVolterTaxCodeService()
+        {
+            var person = _personManager.GetPersonByUsername("admin");
+            int? legacyId = await _csiManager.SearchVolontarioAsync("BAAMMD66P02Z330V", person.Id);
+            if (legacyId.HasValue && legacyId.Value >= 0)
+                return true;
+            else
+                throw new UserFriendlyException(L("VolterServiceNotAvailable"));
         }
 
         public async Task TestGamificationNotification(TestBusConsumerTopicInput input)
